:bug: fix: resolving bug when clicking on favorite icon on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -244,6 +244,7 @@ body {
   }
 
   .articles__icon {
-    width: 0.563rem;
+    width: 1.188rem;
+    height: 1.063rem;
   }
 }
